prevent scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -93,3 +93,7 @@ path {
     stroke: white;
     fill: white;
 }
+
+#svgWrapper {
+    text-align: center;
+}
